<resources>
    <string name="app_name">OriginMercadoTecnia</string>
    <string name="btnIniciar">Iniciar</string>
    <string name="btnEmpezar">Empezar</string>
    <string name="btnHistorial">Historial</string>
    <string name="btnInicioPresupuesto">Presupuesto</string>
    <string name="appbar1">Bienvenido</string>
    <string name="appbar2">Inicio</string>
    <string name="appbar3">Mercaderia</string>
    <string name="appbar4">Presupuesto</string>
    <string name="appbar5">Nota</string>
    <string name="appbar6">Mas informacion</string>
    <string name="appbar7">Historial</string>
    <string name="appbar8">Producto</string>
    <string name="Tnotes">Notas</string>
    <string name="Tienda1">Unimarc</string>
    <string name="tienda2">TOTTUS</string>
    <string name="tienda3">Lider</string>
    <string name="textBienSuper">Elige el mercado que quieras ir de compras</string>
    <string name="originAppName">MercadoTecnia</string>
    <string name="InfPresupuesto1">¿Esto por que?</string>
    <string name="DesPresupuesto1">Si estableces un presupuesto, podras hacer tus compras sin preocuparte por gastar mas de lo que tu decidas</string>
    <string name="InfPresupuesto2">¡No te preocupes!</string>
    <string name="DesPresupuesto2">La aplicacion te alarmara cuando te pases del limite</string>
    <string name="btnAceptarModal">Aceptar</string>
    <string name="btnSalirModal">Salir</string>
    <string name="InfModalEmpezar">Deseas comprar sin establecer un presupuesto?</string>
    <string name="VistaSaldo">Saldo Total</string>
    <string name="btnPresupuesto">Guardar</string>
    <string name="btnEditar">EDITAR</string>
    <string name="btnEliminar">ELIMINAR</string>
    <string name="btnGuardar">GUARDAR</string>
    <string name="btnAgregar">AGREGAR</string>
    <string name="btnQuitar">QUITAR</string>
    <string name="btnQuedarse">Quedarse</string>
    <string name="btnTermino">¡TERMINAR!</string>
    <string name="btnModalMercaTerminoSalir">Aun no</string>
    <string name="btnComCompleta">¡¡COMPRA COMPLETA!!</string>
    <string name="btnAhorraste">Ahorraste:</string>
    <string name="modalNota">Seguro deseas borrar esta nota?</string>
    <string name="titleInfoApp">Que es MercadoTecnia</string>
    <string name="InfoApp">MercadoTecnia es una aplicacion movil capaz de ayudarte a realizar tus compras, realiza un calculo de tus compras automaticamente, y cuenta con funcionalidades capazes de gestionar tus compras y tus necesidades</string>
    <string name="titleInfoApp2">De que va MercadoTecnia</string>
    <string name="InfoApp2">Hay ocasiones en que la persona tiene que ir al supermercado a comprar la mercadería para su hogar, sin embargo, en este caso la persona no tiene los recursos para comprar con libertad, con la aplicación el usuario podrá registrar con el monto que tenga a la mano, y con eso definir un limite para realizar sus comprar. En que ayuda esto? proporciona a la persona un calculo de las compras sin la necesidad de terminarse pasando del presupuesto sin saberlo, realizar la suma de los precios con solo escanear, ahorrarse las molestias de sacar mercadería en el caso de que no te alcance al momento de pagar.</string>
    <string name="InfoProducto">Descripcion:</string>
    <string name="HintProductoAdd">Ingrese precio</string>
    <string name="InfoInicioNota">¡¡ANOTA!!</string>
    <string name="infoModalProducto">Tienes que añadirle un precio al producto</string>
    <string name="Infomodalpresupuesto">Seguro quieres empezar sin agregar un presupuesto?</string>
    <string name="Infomodalmercasalir">SI SALES PERDERAS TODO TU REGISTRO</string>
    <string name="InfomodalMercaTermino">Seguro deseas terminar de comprar?</string>
    <string name="InfomodalPresupuestoPasado">TE HAZ PASADO DEL PRESUPUESTO, DESEAS SEGUIR COMPRANDO?</string>
    <string name="InfoInicioNota2">Haz una nota para que no te olvides de lo que vas a comprar</string>
</resources>