<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".pantalla_principal">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar4"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appbar1"
        android:textColor="@color/opaque_dark_green"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar4" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar4">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/textBienSuper"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/unimarc"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/white"
            android:onClick="TUnimarc"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/Tienda1"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="125dp" />

        <Button
            android:id="@+id/Tottus"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/BackGroundTT"
            android:onClick="TTottus"
            android:text="@string/tienda2"
            android:textColor="@color/letraTT"
            android:textSize="30sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/Lider"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@color/BackGroundLider"
            android:onClick="TLider"
            android:text="@string/tienda3"
            android:textColor="@color/letraLider"
            android:textSize="30dp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView13"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="24dp"
            android:contextClickable="true"
            android:onClick="notes"
            android:tint="@color/green"
            app:srcCompat="@drawable/baseline_note_24" />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="68dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView16"
                android:layout_width="60dp"
                android:layout_height="68dp"
                android:layout_marginLeft="80dp"
                android:tint="@android:color/holo_red_dark"
                app:srcCompat="@drawable/baseline_info_24" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="169dp"
                android:layout_height="69dp"
                android:layout_marginEnd="88dp"
                android:paddingTop="12dp"
                android:text="@string/InfoInicioNota"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="34sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView19"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="34dp"
            android:layout_marginRight="34dp"
            android:text="@string/InfoInicioNota2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>