<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".descripcion_app">

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.54"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar9" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar9"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:onClick="Volver"
        android:tint="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appbar6"
        android:textColor="@color/opaque_dark_green"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar9"
        app:layout_constraintVertical_bias="0.318" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="360dp"
        android:layout_height="85dp"
        android:layout_marginTop="16dp"
        android:shadowColor="@color/black"
        android:text="@string/originAppName"
        android:textColor="@color/green"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar9" />

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_marginStart="24dp"
        android:tint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.203"
        app:srcCompat="@drawable/baseline_notes_24" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="274dp"
        android:layout_height="41dp"
        android:text="@string/titleInfoApp"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toBottomOf="@+id/textView19"
        app:layout_constraintVertical_bias="0.045" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="334dp"
        android:layout_height="151dp"
        android:text="@string/InfoApp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="333dp"
        android:layout_height="222dp"
        android:text="@string/InfoApp2"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView22"
        app:layout_constraintVertical_bias="0.22" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="226dp"
        android:layout_height="75dp"
        android:text="@string/titleInfoApp2"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/view2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toEndOf="@+id/imageView11"
        app:layout_constraintTop_toTopOf="@+id/toolbar9"
        app:layout_constraintVertical_bias="0.583" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="73dp"
        android:layout_height="59dp"
        android:layout_marginStart="28dp"
        android:tint="@color/green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18"
        app:layout_constraintVertical_bias="0.56"
        app:srcCompat="@drawable/baseline_notes_24" />

</androidx.constraintlayout.widget.ConstraintLayout>