<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <View
        android:id="@+id/modal_box"
        android:layout_width="257dp"
        android:layout_height="234dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.418" />

    <Button
        android:id="@+id/btnModalLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/btnAceptarModal"
        android:textColor="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/modal_box"
        app:layout_constraintEnd_toEndOf="@+id/modal_box" />

    <Button
        android:id="@+id/btnModalExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="@string/btnSalirModal"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintBottom_toBottomOf="@+id/modal_box"
        app:layout_constraintEnd_toEndOf="@+id/modal_box"
        app:layout_constraintHorizontal_bias="0.056"
        app:layout_constraintStart_toStartOf="@+id/modal_box" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="234dp"
        android:layout_height="110dp"
        android:text="@string/InfModalEmpezar"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/modal_box"
        app:layout_constraintEnd_toEndOf="@+id/modal_box"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/modal_box"
        app:layout_constraintTop_toTopOf="@+id/modal_box"
        app:layout_constraintVertical_bias="0.201" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="90dp"
        android:layout_height="67dp"
        android:tint="@color/opaque_dark_green"
        app:layout_constraintBottom_toBottomOf="@+id/modal_box"
        app:layout_constraintEnd_toEndOf="@+id/modal_box"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="@+id/modal_box"
        app:layout_constraintTop_toTopOf="@+id/modal_box"
        app:srcCompat="@drawable/baseline_help_24" />

</androidx.constraintlayout.widget.ConstraintLayout>