<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".nota">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"></androidx.appcompat.widget.Toolbar>

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="36dp"
        android:layout_height="38dp"
        android:layout_marginStart="16dp"
        android:clickable="true"
        android:onClick="Volver"
        android:tint="@color/green"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appbar5"
        android:textColor="@color/opaque_dark_green"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar7"
        app:layout_constraintEnd_toEndOf="@+id/toolbar7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/toolbar7" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar7">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnEliminarNote"
                    android:layout_width="202dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/btnEliminar"
                    android:textColor="@android:color/holo_red_dark" />

                <Button
                    android:id="@+id/button4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/black"
                    android:text="@string/btnEditar"
                    android:textColor="@color/green" />
            </LinearLayout>

            <EditText
                android:id="@+id/TituloNota"
                android:layout_width="match_parent"
                android:layout_height="104dp"
                android:ems="10"
                android:inputType="text"
                android:textColor="@color/green"
                android:textColorHighlight="@color/green"
                android:textSize="30dp" />

            <EditText
                android:id="@+id/DescripcionNota"
                android:layout_width="match_parent"
                android:layout_height="341dp"
                android:background="@color/black"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <Button
                android:id="@+id/btnGuardarNote"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/green_dark"
                android:onClick="notasSave"
                android:text="@string/btnGuardar"
                android:textColor="@color/green" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>